force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/BGBK__Payment_Collection_Types__mdt.object-meta.xml
<CustomObject>
    <description>All the details related to Payment Collection type that will be used to create the dynamic component in the Item Search page.</description>
    <label>Payment Collection Types</label>
    <pluralLabel>Payment Collection Types</pluralLabel>
</CustomObject>