force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Component_Name__c</fullName>
    <description>Specify the name of your custom Visualforce Component name or leave blank for standard searches.</description>
    <inlineHelpText>Specify the name of your custom Visualforce Component name or leave blank for standard searches.</inlineHelpText>
    <label>Component Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>