force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__Deposit_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Deposit_Fieldset_Name__c</fullName>
    <description>Deposit Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page.</description>
    <inlineHelpText>Deposit Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page. This needs to be set only if deposits need to be listed in the Payable Items.</inlineHelpText>
    <label>Deposit Fieldset Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>