force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__Fee_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Fee_Fieldset_Name__c</fullName>
    <description>Fee Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page.</description>
    <inlineHelpText>Fee Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page. This needs to be set only if fees need to be listed in the Payable Items.</inlineHelpText>
    <label>Fee Fieldset Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>