force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__Invoice_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Invoice_Fieldset_Name__c</fullName>
    <description>Invoice Fieldset API Name determines what invoice columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page.</description>
    <inlineHelpText>Invoice Fieldset API Name determines what invoice columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page. This needs to be set only if invoices need to be listed in the Payable Items.</inlineHelpText>
    <label>Invoice Fieldset Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>