force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__isActive__c.field-meta.xml
<CustomField>
    <fullName>BGBK__isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the payment collection type will be available on the Payment Batch.</description>
    <inlineHelpText>Check this to activate the payment collection type and make it available on the Payment Batch.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>