force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__IsExactMatch__c.field-meta.xml
<CustomField>
    <fullName>BGBK__IsExactMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When finding parents records of payment collection items use only exact matches (as opposed to partial matches)</description>
    <inlineHelpText>When finding parents records of payment collection items use only exact matches (as opposed to partial matches)</inlineHelpText>
    <label>Exact Match Search</label>
    <type>Checkbox</type>
</CustomField>