force-app/main/default/objects/BGBK__Payment_Collection_Types__mdt/fields/BGBK__IsPortalAccessible__c.field-meta.xml
<CustomField>
    <fullName>BGBK__IsPortalAccessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow portal users to find parents records of payment collection items</description>
    <inlineHelpText>Allow portal users to find parents records of payment collection items</inlineHelpText>
    <label>Portal Accessible</label>
    <type>Checkbox</type>
</CustomField>